--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,34 @@
 version: '3'
 services:
-  selenium_hub:
-    image: selenium/hub
+  selenoid:
+    image: "aerokube/selenoid"
+    network_mode: bridge
     ports:
-      - 4444:4444
-  node_1:
-    image: selenium/node-chrome
-    depends_on:
-      - selenium_hub
-    environment:
-      - HUB_PORT_4444_TCP_ADDR=selenium_hub
-      - SE_EVENT_BUS_HOST=selenium_hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - "4444:4444"
+    volumes:
+      - "$PWD:/etc/selenoid/" # assumed current dir contains browsers.json
+      - "/var/run/docker.sock:/var/run/docker.sock"
+  selenoid-ui:
+    image: "aerokube/selenoid-ui"
+    network_mode: bridge
+    links:
+      - selenoid
+    ports:
+      - "8080:8080"
+    command: ["--selenoid-uri", "http://selenoid:4444"]
+  # selenium_hub:
+  #   image: selenium/hub
+  #   ports:
+  #     - 4444:4444
+  # node_1:
+  #   image: selenium/node-chrome
+  #   depends_on:
+  #     - selenium_hub
+  #   environment:
+  #     - HUB_PORT_4444_TCP_ADDR=selenium_hub
+  #     - SE_EVENT_BUS_HOST=selenium_hub
+  #     - SE_EVENT_BUS_PUBLISH_PORT=4442
+  #     - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
 #  node_2:
 #    image: selenium/node-firefox
 #    environment:
